5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1709_3032.log
== TEST (2019-05-02 11:19:43) 
-- CODE:
x = float(input("insira o valor de x:"))

if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(x**(1/2))
else:
	print(x**(1/3))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:20:44) 
-- CODE:
x = float(input("insira o valor de x:"))

if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4)
else:
	print(round(x**(1/3),4)
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:20:57) 
-- CODE:
x = float(input("insira o valor de x:"))

if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:09) 
-- CODE:
x = float(input("insira o valor de x:"))

if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:18) 
-- CODE:
x = float(input("insira o valor de x:"))

if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:21:52) 
-- CODE:
x = float(input("insira o valor de x:"))

if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:59) 
-- CODE:
x = float(input("insira o valor de x:"))

if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:23:22) 
-- CODE:
x = float(input("insira o valor de x:"))

if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:23:32) 
-- CODE:
x = float(input("insira o valor de x:"))

if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:23:43) 
-- CODE:
x = float(input("insira o valor de x:"))

if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:24:13) 
-- CODE:
x = float(input("insira o valor de x:"))

if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:24) 
-- CODE:
x = float(input("insira o valor de x:"))
from math import *
if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:45) 
-- CODE:
x = float(input("insira o valor de x:"))
from math import *
if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:54) 
-- CODE:
x = float(input("insira o valor de x:"))
from math import *
if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:25:57) 
-- CODE:
x = float(input("insira o valor de x:"))
from math import *
if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:26:02) 
-- CODE:
x = float(input("insira o valor de x:"))
from math import *
if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:26:11) 
-- CODE:
x = float(input("insira o valor de x:"))
from math import *
if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:26:18) 
-- CODE:
x = float(input("insira o valor de x:"))
from math import *
if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:26:54) 
-- CODE:
x = float(input("insira o valor de x:"))
from math import *
if(x <= 0):
	print(0)
elif(x > 0 and x <= 1):
	print(1)
elif(x > 1 and x <=2):
	print(round(x**(1/2),4))
else:
	print(round(x**(1/3),4))
-- EXECUTION TIME:
0.308012
-- TEST CASE 1:
---- input:
0.57
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
1.99
---- correct output:
1.4107
---- user output:
1.4107
-- TEST CASE 3:
---- input:
2.01
---- correct output:
1.262
---- user output:
1.262
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
